[gd_scene load_steps=14 format=3 uid="uid://dr0xajkx7um6s"]

[ext_resource type="Script" uid="uid://ch54mwq4ryg5s" path="res://scene/main/music_tab_element.gd" id="1_q1i45"]
[ext_resource type="Shader" uid="uid://c1uo7f0ub7v3v" path="res://shader/music_tab_element.gdshader" id="2_ee2h4"]
[ext_resource type="Texture2D" uid="uid://ddty6kr3nwo1" path="res://texture/back.svg" id="4_qeiew"]
[ext_resource type="Texture2D" uid="uid://bhqag3ugrhh1p" path="res://texture/move.svg" id="5_uyde3"]
[ext_resource type="Texture2D" uid="uid://mui00e4hh85p" path="res://texture/close.svg" id="6_e3p8h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kln0s"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.14973193, 0.14973193, 0.14973193, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kln0s"]
shader = ExtResource("2_ee2h4")
shader_parameter/use_sprite_alpha = true
shader_parameter/use_transition_texture = false
shader_parameter/transition_type = 0
shader_parameter/position = Vector2(0, 0)
shader_parameter/invert = false
shader_parameter/grid_size = Vector2(1, 1)
shader_parameter/rotation_angle = 0.0
shader_parameter/stagger = Vector2(0, 0.245)
shader_parameter/stagger_frequency = Vector2i(2, 2)
shader_parameter/flip_frequency = Vector2i(1, 1)
shader_parameter/basic_feather = 1.5850000000064028
shader_parameter/use_mask_size = false
shader_parameter/mask_size = Vector2(100, 100)
shader_parameter/edges = 6
shader_parameter/shape_feather = 0.1
shader_parameter/sectors = 1
shader_parameter/clock_feather = 0.0
shader_parameter/progress = 0.0
shader_parameter/progress_bias = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_ee2h4"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_kln0s"]
resource_name = "edit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:scale:x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_q1i45"]
resource_name = "hover"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.12, 1.12), Vector2(1.1, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ee2h4"]
_data = {
&"RESET": SubResource("Animation_ee2h4"),
&"edit": SubResource("Animation_kln0s"),
&"hover": SubResource("Animation_q1i45")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uyde3"]
content_margin_left = 7.0
content_margin_top = 7.0
content_margin_right = 7.0
content_margin_bottom = 7.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3p8h"]
content_margin_left = 11.0
content_margin_top = 11.0
content_margin_right = 11.0
content_margin_bottom = 11.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="Panel" type="Panel"]
clip_children = 2
clip_contents = true
custom_minimum_size = Vector2(0, 200)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kln0s")
script = ExtResource("1_q1i45")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = -332.0
offset_right = 1536.0
offset_bottom = 332.0
grow_vertical = 2
mouse_filter = 2
expand_mode = 5

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
material = SubResource("ShaderMaterial_kln0s")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Name" type="Label" parent="TextureRect/ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 37.0
offset_top = -38.0
offset_right = 38.0
offset_bottom = 38.0
grow_vertical = 2
theme_override_font_sizes/font_size = 55

[node name="Singer" type="Label" parent="TextureRect/ColorRect/Name"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.5
offset_top = 67.0
offset_right = 31.5
offset_bottom = 143.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ee2h4")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ee2h4")
}
speed_scale = 3.0

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -9.0
offset_right = 71.0
grow_vertical = 2
mouse_filter = 1
flat = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1)
color = Color(0.43137255, 0.654902, 0.79607844, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 65.0
offset_top = -32.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="Back" type="Button" parent="ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
icon = ExtResource("4_qeiew")
flat = true
expand_icon = true

[node name="Move" type="Button" parent="ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
icon = ExtResource("5_uyde3")
flat = true
expand_icon = true

[node name="Remove" type="Button" parent="ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_uyde3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e3p8h")
theme_override_styles/hover = SubResource("StyleBoxFlat_e3p8h")
icon = ExtResource("6_e3p8h")
flat = true
expand_icon = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Move" to="." method="_on_move_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Remove" to="." method="_on_remove_pressed"]
